# widiscover

./: .gitignore  README.md  config.json  globalcss.txt  main.py  pyproject.toml  widiscover  widiscover-api.py  widiscover.info  widiscover_core.py
ui/: package-lock.json  package.json  svelte.config.js
ui/src/: app.css
ui/src/components/: Button.svelte  Input.svelte
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/config/: +page.svelte
ui/src/routes/main/: +page.svelte
